fix horizontal scroll on page

--- a/src/css/common/base.css
+++ b/src/css/common/base.css
@@ -8,7 +8,6 @@ body {
   line-height: 1.28;
   color: var(--secondary);
   background-color: var(--primary);
-  width: 100vw;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
